--- a/index.html
+++ b/index.html
@@ -393,6 +393,30 @@
             }
         }
     </script>
+    <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyBzA8qQwVyk2dXgqxu3rZplb-an_icNCSY",
+    authDomain: "book-club-24.firebaseapp.com",
+    databaseURL: "https://book-club-24-default-rtdb.firebaseio.com",
+    projectId: "book-club-24",
+    storageBucket: "book-club-24.appspot.com",
+    messagingSenderId: "40609120563",
+    appId: "1:40609120563:web:3870108f096d3a9a09be46",
+    measurementId: "G-XFKF0MTZHJ"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
 </body>
 </html>
 
